--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "2.2.0"
-  },
-  "devDependencies": {}
+    "body-parser": "2.2.0",
+    "express": "^5.1.0"
+  }
 }
